# MeDizUm

./: README.md  setup.cfg
medizum/dados/: cores.csv  estados.csv  meses.csv  nomes_femininos.csv  signos.csv
medizum/medizum.egg-info/: PKG-INFO
src/: main.py  medizum.py
src/dados/: cidades.csv  dias.csv  nomes_masculinos.csv  produtos.csv
