[metadata]
name= medizum
version= 0.0.1
author= Matheus Victor, Vinicius Dias
author_email= matheusvictorufpi@gmail.com
description= Pacote para gerar dados simples.
long_description= file: README.md
long_description_content_type= text/markdown
url= https://github.com/taotamat/medizum
classifiers=
        Programming Language :: Python :: 3
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        

[options]
package_dir = 
        = libtwitter
packages = find:
python_requires = >=3.8
install_requires = 
        Pillow>=7.0.0
        pandas>=1.2.4



[options.packages.find]
where = medizum